update code use ngxs thay service to delete , update, add, get customer

--- a/src/app/customers/customers-card/customers-card.component.html
+++ b/src/app/customers/customers-card/customers-card.component.html
@@ -3,7 +3,7 @@
   <app-customers></app-customers>
   <br>
   <div class="row card-container">
-      <div class="col-sm-6 col-md-4 col-lg-4" *ngFor="let customer of data">
+      <div class="col-sm-6 col-md-4 col-lg-4" *ngFor="let customer of customers$ | async">
           <div class="card">
             <div class="card-header">
               <a [routerLink]="['/customers',customer.id,'details']" class="white">
