--- a/src/app/customers/detail-customer/detail-customer.component.html
+++ b/src/app/customers/detail-customer/detail-customer.component.html
@@ -24,3 +24,25 @@
     form.controls.avatar.value)">Save</button>
 
  </form>
+<!-- {{dataCustomer.first_name}}{{ dataCustomer.last_name}}
+
+<div *ngIf="customers$ | async as dataCustomer">
+  <h2>{{dataCustomer.first_name}}{{ dataCustomer.last_name}} Details</h2>
+  <div><span>id:</span>{{dataCustomer.id}}</div>
+  <div><span>name:</span>{{dataCustomer.first_name}}{{ dataCustomer.last_name}} </div>
+
+  <div class="">
+    <label for="name">FirstName:</label>
+    <input type="text" id= "name" [(ngModel)]="dataCustomer.first_name">
+  </div>
+  <div class="">
+    <label for="name">LastName:</label>
+    <input type="text" id= "name" [(ngModel)]="dataCustomer.last_name">
+  </div>
+  <div class="">
+    <label for="name">Email:</label>
+    <input type="text" id= "name" [(ngModel)]="dataCustomer.email">
+  </div>
+  <button (click)="goBack()">Go back</button>
+  <button (click)="save(dataCustomer)">Save</button>
+</div> -->
