--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <div class="navbar-header">
+      <h2>{{dataUser}}</h2>
       <ul class="nav navbar-nav nav-pills navBarPadding">
         <li class="nav-item">
           <a [routerLink]="['/customers']" class="nav-link" href="">Customers</a>
@@ -12,10 +13,14 @@
           <a class="nav-link" href="">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Login</a>
+          <a [routerLink]="['/login']" class="nav-link" href="">Login</a>
+        </li>
+        <li class="nav-item">
+          <a (click)= "logout()" [routerLink]="['/login']" class="nav-link" href="#">Logout</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 <router-outlet></router-outlet>
+
