--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,5 +22,8 @@
     </div>
   </div>
 </nav>
+<mat-progress-bar
+  *ngIf = "loading" color = "accent" mode ="determinate">
+</mat-progress-bar>
 <router-outlet></router-outlet>
 
