--- a/src/app/customers/new-customer/new-customer.component.html
+++ b/src/app/customers/new-customer/new-customer.component.html
@@ -1,6 +1,6 @@
 
-
   <app-customers></app-customers>
+<div >
   <br>
   <div class="container">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
@@ -57,5 +57,6 @@
       </div>
     </form>
   </div>
+</div>
 
 
